[package]
name = "fips"
version = "0.1.0"
authors = ["Florian Pfingstag <soultice@gmail.com>"]
edition = "2021"
description = "A powerful mock server supported by a plugin system"
license = "MIT"
homepage = "https://github.com/soultice/fips"
documentation = "https://github.com/soultice/fips"
repository = "https://github.com/soultice/fips"

[features]
logging = []
ui = []
default = ['ui']

[dependencies]
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14.27", features = ["full"] }
hyper-staticfile = { version = "0.9.2" }
clap = { version = "3.0.0-rc.7", features = ["derive"] }
regex = "1.4.2"
rand = "0.7"
libloading = "0.6.6"
bytes = "1.0.0"
serde_yaml = "0.8.14"
serde = "1.0.118"
serde_json = "1.0.60"
json-patch = "0.3.0"
crossterm = "0.25"
log = "0.4.17"
futures = "0.3.19"
json_dotpath = "1.0.3"
colorgrad = "0.6.2"
lazy_static = "1.4.0"
http = "0.2.6"
thiserror = "1.0.38"
schemars = "0.8.11"

[dependencies.gradient_tui_fork]
git = "https://github.com/soultice/tui-rs.git"
default-features = false
features = ['crossterm']
version = "0.19"

[dependencies.log4rs]
version = "1.2.0"
features = [
	'file_appender',
	'rolling_file_appender',
	'compound_policy',
	'delete_roller',
	'size_trigger'
]
